--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ S3method(plot,jfaSampling)
 S3method(print,jfaEvaluation)
 S3method(print,jfaPlanning)
 S3method(print,jfaSampling)
-export(confidenceBound)
-export(sampleSize)
+export(evaluation)
+export(planning)
 export(sampling)
