update link to license

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "k.derks@nyenrode.nl")
 Description: The package jfa provides functions for daily use in auditing, such as calculating sample sizes, sampling, and calculating confidence bounds.
-License: GPL-3
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.1
