--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+# Use R language
+language: r
+#Define multiple R-versions, one from bioconductor
+r:
+  - oldrel
+  - release
+  - devel
+  - bioc-devel
+  
 cache: packages
