--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,16 @@
 
 # Use R language
 language: r
-#Define multiple R-versions, one from bioconductor
+# Test for multiple R-versions, one from bioconductor
 r:
   - oldrel
   - release
   - devel
   - bioc-devel
+
+# Test for multiple operating systems
+os:
+  - linux
+  - osx
   
 cache: packages
