--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,6 @@ License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.1
+VignetteBuilder: knitr
 Suggests: 
-    testthat
+    testthat, knitr, rmarkdown
