--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "k.derks@nyenrode.nl")
 Description: The jfa package provides functions for daily use in auditing, such as calculating sample sizes, sampling, and calculating confidence bounds.
 Language: en-US
-License: GPL-3 + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.1
