--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: jfa
-Title: Functions for daily use in audit sampling
+Title: Bayesian and Classical Audit Sampling
 Version: 0.1.0
 Authors@R: 
     person(given = "Koen",
            family = "Derks",
            role = c("aut", "cre"),
            email = "k.derks@nyenrode.nl")
-Description: Implements functions to set up the audit sampling workflow as discussed in Derks et al. (2019) doi: 10.31234/osf.io/9f6ub.
+Description: Implements functions to set up the audit sampling workflow as discussed in Derks et al. (2019) <doi:10.31234/osf.io/9f6ub>.
 Language: en-US
 License: GPL-3
 Encoding: UTF-8
