--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,jfaPrior)
 S3method(plot,jfaSampling)
 S3method(print,jfaEvaluation)
 S3method(print,jfaPlanning)
+S3method(print,jfaPosterior)
 S3method(print,jfaPrior)
 S3method(print,jfaSampling)
 export(auditPrior)
