--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,jfaEvaluation)
 S3method(plot,jfaPlanning)
+S3method(plot,jfaPosterior)
 S3method(plot,jfaPrior)
 S3method(plot,jfaSampling)
 S3method(print,jfaEvaluation)
