--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 S3method(plot,jfaEvaluation)
 S3method(plot,jfaPlanning)
+S3method(plot,jfaPosterior)
 S3method(plot,jfaPrior)
-S3method(plot,jfaSampling)
+S3method(plot,jfaSelection)
 S3method(print,jfaEvaluation)
 S3method(print,jfaPlanning)
+S3method(print,jfaPosterior)
 S3method(print,jfaPrior)
-S3method(print,jfaSampling)
+S3method(print,jfaSelection)
 export(auditPrior)
 export(evaluation)
 export(planning)
 export(sampling)
+export(selection)
