Set up jfa 0.5.0 (#18)
* Setup jfa 0.5.0

+ remove sampling function
+ initial work on description and manual etc.

* Add codecov

* 100 percent coverage in unit tests

* Check in codecov.yml

* Revert "Check in codecov.yml"

This reverts commit 2aeeaa8d01fc97c8eef4d6c25d54f9fcce9b1674.

* Add CITATION

* Create r.yml (#16)

* Create pkgdown.yml

* Logo update

* Revert "Logo update"

This reverts commit 04856711533b3dc32084336471bfadd3cccc3fee.

* Update website

* add code of conduct

* Update templates

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,5 +1,10 @@
 ^\.travis\.yml$
-cran-comments.md
+^cran-comments.md$
+^codecov.yml$
+^.github$
 ^doc$
 ^Meta$
 ^CRAN-RELEASE$
+^README.Rmd$
+^docs$
+^pkgdown$
