--- a/.github/workflows/render-readme.yml
+++ b/.github/workflows/render-readme.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add README.md man/figures/README-* man/figures/downloads/downloads.png
+          git add man/figures/README-* man/figures/downloads/downloads.png
           git commit -m "Update downloads" || echo "No changes to commit"
           git push origin development || echo "No changes to commit"
