--- a/.github/workflows/render-readme.yml
+++ b/.github/workflows/render-readme.yml
@@ -20,7 +20,7 @@ jobs:
       # install packages needed
       - name: Install required packages and refresh README
         run: |
-          install.packages(c("remotes", "rmarkdown", "cranlogs", "lubridate", "plyr", "ggplot2", "scales"))
+          install.packages(c("remotes", "rmarkdown", "cranlogs", "lubridate", "plyr", "ggplot2", "scales", "maptools", "installr", "data.table", "svglite"))
           remotes::install_github("bbc/bbplot")
           rmarkdown::render("README.Rmd")
         shell: Rscript {0}
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add man/figures/readme/downloads/README-* man/figures/readme/downloads/downloads.png
+          git add man/figures/readme/downloads/README-* man/figures/readme/downloads/downloads.png man/figures/readme/worldmap/worldmap.svg man/figures/readme/worldmap/downloads.csv 
           git commit -m "Update downloads" || echo "No changes to commit"
           git push origin development || echo "No changes to commit"
