pkgdown remotes::install_dev to install_packages

--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE, type = "binary")
           remotes::install_github("tidyverse/tidytemplate")
-          remotes::install_dev("pkgdown")
+          install.packages("pkgdown")
         shell: Rscript {0}
 
       - name: Install package
