--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -1,21 +1,13 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-#
-# See https://github.com/r-lib/actions/tree/master/examples#readme for
-# additional example workflows available for the R community.
-
-name: R-CMD
-
 on:
   push:
     branches:
-      - master
-      - development
+      - '*'
   pull_request:
     branches:
       - master
+  create:
+
+name: R-CMD
 
 jobs:
   R-CMD-check:
