--- a/.github/workflows/update-downloads.yml
+++ b/.github/workflows/update-downloads.yml
@@ -1,7 +1,6 @@
-on: workflow_dispatch
-# on:
-#   schedule:
-#     - cron:  '00 02 * * *'
+on:
+  schedule:
+    - cron:  '00 02 * * *'
 
 name: Update package statistics
 
