--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R:
 Description: Implements the audit sampling workflow as discussed in Derks et al. (2019) <doi:10.31234/osf.io/9f6ub>. The package makes it easy for an auditor to plan a statistical sample, select the sample from the population, and evaluate the sample using various methods according to the International Standards on Auditing. Furthermore, the package implements Bayesian equivalents of these methods. 
 BugReports: https://github.com/koenderks/jfa/issues
 URL: https://koenderks.github.io/jfa/, https://github.com/koenderks/jfa
-Imports: graphics, kableExtra, knitr, rmarkdown, stats
-Suggests: testthat
+Imports: graphics, stats
+Suggests: kableExtra, knitr, MUS, rmarkdown, testthat
 Language: en-US
 License: GPL-3
 Encoding: UTF-8
