--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPrior)
 S3method(print,jfaSelection)
+export(auditBF)
 export(auditPrior)
 export(evaluation)
 export(planning)
