Add summary functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,11 @@ S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPrior)
 S3method(print,jfaSelection)
+S3method(summary,jfaEvaluation)
+S3method(summary,jfaPlanning)
+S3method(summary,jfaPosterior)
+S3method(summary,jfaPrior)
+S3method(summary,jfaSelection)
 export(auditBF)
 export(auditPrior)
 export(evaluation)
