Add print.summary functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,11 @@ S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPrior)
 S3method(print,jfaSelection)
+S3method(print,summary.jfaEvaluation)
+S3method(print,summary.jfaPlanning)
+S3method(print,summary.jfaPosterior)
+S3method(print,summary.jfaPrior)
+S3method(print,summary.jfaSelection)
 S3method(summary,jfaEvaluation)
 S3method(summary,jfaPlanning)
 S3method(summary,jfaPosterior)
