--- a/.github/workflows/update-downloads.yml
+++ b/.github/workflows/update-downloads.yml
@@ -31,7 +31,7 @@ jobs:
       # Step 4: Render relevant data and figures
       - name: Render relevant data and figures
         run: |
-          source("man/figures/render-figures.R")
+          source(".github/workflows/render-figures.R")
         shell: Rscript {0}
 
       # Step 5: Create a pull request with the updated data and figures to development
