--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,16 +8,19 @@ S3method(plot,jfaSelection)
 S3method(print,jfaEvaluation)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
+S3method(print,jfaPredictive)
 S3method(print,jfaPrior)
 S3method(print,jfaSelection)
 S3method(print,summary.jfaEvaluation)
 S3method(print,summary.jfaPlanning)
 S3method(print,summary.jfaPosterior)
+S3method(print,summary.jfaPredictive)
 S3method(print,summary.jfaPrior)
 S3method(print,summary.jfaSelection)
 S3method(summary,jfaEvaluation)
 S3method(summary,jfaPlanning)
 S3method(summary,jfaPosterior)
+S3method(summary,jfaPredictive)
 S3method(summary,jfaPrior)
 S3method(summary,jfaSelection)
 export(auditPrior)
