--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(plot,jfaPosterior)
 S3method(plot,jfaPredictive)
 S3method(plot,jfaPrior)
 S3method(plot,jfaSelection)
+S3method(predict,jfaPosterior)
+S3method(predict,jfaPrior)
 S3method(print,jfaEvaluation)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
