--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ URL: https://koenderks.github.io/jfa/, https://github.com/koenderks/jfa
 Imports: extraDistr, graphics, stats
 Suggests: kableExtra, knitr, MUS, rmarkdown, testthat
 Language: en-US
-License: GPL-3
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
