--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -38,6 +38,7 @@ jobs:
           remotes::install_deps(dependencies = TRUE, type = "binary")
           remotes::install_github("tidyverse/tidytemplate")
           install.packages("pkgdown")
+          install.packages("preferably")
         shell: Rscript {0}
 
       - name: Install package
