--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,9 @@ S3method(summary,jfaPosterior)
 S3method(summary,jfaPrior)
 S3method(summary,jfaSelection)
 export(auditPrior)
-export(data_digit_distribution)
-export(data_repeated_values)
+export(digit_distribution)
 export(evaluation)
 export(planning)
+export(repeated_values)
 export(report)
 export(selection)
