--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(predict,jfaPosterior)
 S3method(predict,jfaPrior)
 S3method(print,jfaDistr)
 S3method(print,jfaEvaluation)
+S3method(print,jfaMis)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPrior)
@@ -27,9 +28,9 @@ S3method(summary,jfaPosterior)
 S3method(summary,jfaPrior)
 S3method(summary,jfaSelection)
 export(auditPrior)
-export(digit_distribution)
+export(digit.test)
 export(evaluation)
 export(planning)
-export(repeated_values)
+export(repeated.test)
 export(report)
 export(selection)
