--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -52,10 +52,15 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
-      - name: Install JAGS
+      - name: Install JAGS on macOS
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y jags
+          if [ "${{ runner.os }}" = 'macOS' ]; then
+            brew install jags
+
+      - name: Install JAGS on Linux
+        run: |
+          if [ "${{ runner.os }}" = 'Linux' ]; then
+            sudo apt install jags
 
       - name: Install system dependencies
         if: runner.os == 'Linux'
