--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -34,6 +34,21 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
+      - name: Locate JAGS on Windows
+        if: runner.os == 'Windows'
+        run: |
+          path <- normalizePath(file.path("..", "pkgs", "64", "JAGS"), winslash = "/")
+          cat("\nSys.setenv(JAGS_HOME = '", path, "')\n", file = "~/.Rprofile", sep = "", append = TRUE)
+        shell: Rscript {0}
+
+      - name: Install JAGS on macOS
+        if: runner.os == 'macOS'
+        run: brew install jags
+
+      - name: Install JAGS on Linux
+        if: runner.os == 'Linux'
+        run: sudo apt install jags
+
       - name: Install dependencies
         run: |
           install.packages(c("remotes"))
