--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -53,7 +53,7 @@ jobs:
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
       - name: Locate JAGS on Windows
-        if: runner.os == 'macOS'
+        if: runner.os == 'Windows'
         run: |
           path <- normalizePath(file.path("..", "pkgs", "64", "JAGS"), winslash = "/")
           cat("\nSys.setenv(JAGS_HOME = '", path, "')\n", file = "~/.Rprofile", sep = "", append = TRUE)
