--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -55,14 +55,12 @@ jobs:
       - name: Clone jasp-required-files on windows
         if: runner.os == 'Windows'
         run: |
-          branch='Windows'
-          echo "branch=$branch"
-          git clone --branch=$branch https://github.com/jasp-stats/jasp-required-files.git pkgs
-          # set JAGS_ROOT environment variable required for compiling JAGS_MODULES
+          git clone --branch='Windows' https://github.com/jasp-stats/jasp-required-files.git pkgs
           jags_root=$(readlink -f pkgs/64/JAGS)
           echo "jags_root = $jags_root"
           echo "JAGS_ROOT=$jags_root" >> $GITHUB_ENV
         working-directory: ..
+        shell: bash
 
       - name: Locate JAGS on Windows
         if: runner.os == 'Windows'
