--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R:
 Description: Provides statistical methods for audit sampling and data auditing as implemented in JASP for Audit (Derks et al., 2021 <doi:10.21105/joss.02733>). First, the package makes it easy for an auditor to plan a statistical sample, select the sample from the population, and evaluate the misstatement in the sample compliant with international standards on auditing. Next to classical audit sampling methodology, the package implements Bayesian equivalents of these methods whose statistical underpinnings are described in Derks et al. (2021) <doi:10.1111/ijau.12240>, Derks et al. (2021) <doi:10.31234/osf.io/kzqp5>, and Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>. Second, the package provides statistical tools for auditing data, including (Bayesian) tests of digit distributions and tests for repeated values.
 BugReports: https://github.com/koenderks/jfa/issues
 URL: https://koenderks.github.io/jfa/, https://github.com/koenderks/jfa
-Imports: extraDistr, graphics, stats
-Suggests: benford.analysis, BenfordTests, BeyondBenford, coda, kableExtra, knitr, MUS, rjags, rmarkdown, samplingbook, testthat
+Imports: coda, extraDistr, graphics, rjags, stats
+Suggests: benford.analysis, BenfordTests, BeyondBenford, kableExtra, knitr, MUS, rmarkdown, samplingbook, testthat
 Language: en-US
 License: GPL (>= 3)
 Encoding: UTF-8
