--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,7 @@ export(planning)
 export(repeated.test)
 export(report)
 export(selection)
+import(Rcpp)
+import(methods)
+importFrom(rstan,sampling)
+useDynLib(jfa, .registration = TRUE)
