--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: jfa
-Title: Bayesian and Classical Methods for Auditing
+Title: Bayesian and Classical Statistical Auditing
 Version: 0.6.5
 Date: 2022-11-10
 Authors@R:
@@ -8,13 +8,13 @@ Authors@R:
            role = c("aut", "cre"),
            email = "k.derks@nyenrode.nl",
            comment = c(ORCID = '0000-0002-5533-9349'))
-Description: Provides statistical methods for audit sampling and data auditing as implemented in 
+Description: Provides Bayesian and classical methods for statistical auditing as implemented in 
     JASP for Audit (Derks et al., 2021 <doi:10.21105/joss.02733>). First, the package makes it easy 
     for an auditor to plan a statistical sample, select the sample from the population, and evaluate 
-    the misstatement in the sample compliant with international standards on auditing. Next to classical 
+    the misstatement in the sample compliant with international auditing standards. Next to classical 
     audit sampling methodology, the package implements Bayesian equivalents of these methods whose statistical 
     underpinnings are described in Derks et al. (2021) <doi:10.1111/ijau.12240>, Derks et al. (2021) <doi:10.31234/osf.io/kzqp5>, 
-    and Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>. Second, the package provides statistical tools for 
+    and Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>. Second, the package provides statistical methods for 
     auditing data, including (Bayesian) tests of digit distributions and tests for repeated values.
 Depends:
     R (>= 3.4.0)
