Update style further

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,10 @@ S3method(summary,jfaPosterior)
 S3method(summary,jfaPrior)
 S3method(summary,jfaSelection)
 export(auditPrior)
-export(digit.test)
+export(digit_test)
 export(evaluation)
 export(planning)
-export(repeated.test)
+export(repeated_test)
 export(report)
 export(selection)
 import(Rcpp)
