--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,24 @@
 Package: jfa
 Title: Statistical Methods for Auditing
 Version: 0.6.5
-Date: 2022-11-10
+Date: 2022-11-19
 Authors@R:
     person(given = "Koen",
            family = "Derks",
            role = c("aut", "cre"),
            email = "k.derks@nyenrode.nl",
            comment = c(ORCID = '0000-0002-5533-9349'))
-Description: Provides statistical methods for auditing as implemented in 
-    JASP for Audit (Derks et al., 2021 <doi:10.21105/joss.02733>). First, the package makes it easy 
-    for an auditor to plan a statistical sample, select the sample from the population, and evaluate 
-    the misstatement in the sample compliant with international auditing standards. Next to classical 
-    audit sampling methodology, the package implements Bayesian equivalents of these methods whose statistical 
-    underpinnings are described in Derks et al. (2021) <doi:10.1111/ijau.12240>, Derks et al. (2021) <doi:10.31234/osf.io/kzqp5>, 
-    and Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>. Second, the package provides statistical methods for 
-    auditing data, including (Bayesian) tests of digit distributions and tests for repeated values.
+Description: Provides statistical methods for auditing as implemented in JASP
+    for Audit (Derks et al., 2021 <doi:10.21105/joss.02733>). First, the package
+    makes it easy for an auditor to plan a statistical sample, select the sample
+    from the population, and evaluate the misstatement in the sample compliant
+    with international auditing standards. Next to classical audit sampling
+    methodology, the package implements Bayesian equivalents of these methods
+    whose statistical underpinnings are described in Derks et al. (2021)
+    <doi:10.1111/ijau.12240>, Derks et al. (2021) <doi:10.31234/osf.io/kzqp5>,
+    and Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>. Second, the package
+    provides statistical methods for auditing data, including (Bayesian) tests
+    of digit distributions and tests for repeated values.
 Depends:
     R (>= 3.4.0)
 Imports:
@@ -29,14 +32,14 @@ Imports:
     rstantools (>= 2.2.0),
     stats
 Suggests:
-    benford.analysis,
-    BenfordTests,
-    BeyondBenford,
+    benford.analysis (>= 0.1.5),
+    BenfordTests (>= 1.2.0),
+    BeyondBenford (>= 1.4),
     kableExtra,
     knitr,
-    MUS,
+    MUS (>= 0.1.6),
     rmarkdown,
-    samplingbook,
+    samplingbook (>= 1.2.4),
     testthat
 LinkingTo:
     BH (>= 1.66.0),
