--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Description: Provides statistical methods for auditing as implemented in JASP
 Depends:
     R (>= 3.5.0)
 Imports:
+    entropy,
     extraDistr,
     ggplot2,
     methods,
