--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,11 +22,11 @@ Description: Provides statistical methods for auditing as implemented in JASP
 Depends:
     R (>= 3.5.0)
 Imports:
-    entropy,
     extraDistr,
     ggplot2,
     methods,
     moments,
+    philentropy,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
