Update predict function to handle everything

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,jfaDistr)
 S3method(plot,jfaEvaluation)
 S3method(plot,jfaPlanning)
 S3method(plot,jfaPosterior)
+S3method(plot,jfaPredict)
 S3method(plot,jfaPrior)
 S3method(plot,jfaRv)
 S3method(predict,jfaPosterior)
