--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(print,jfaDistr)
 S3method(print,jfaEvaluation)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
+S3method(print,jfaPredict)
 S3method(print,jfaPrior)
 S3method(print,jfaRv)
 S3method(print,jfaSelection)
