Add benchmark data

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -83,6 +83,7 @@ reference:
       Example data sets included in the **jfa** package.
     contents:
       - allowances
+      - benchmark
       - BuildIt
       - carrier
       - retailer
