--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,13 @@ S3method(print,jfaPredict)
 S3method(print,jfaPrior)
 S3method(print,jfaRv)
 S3method(print,jfaSelection)
+S3method(print,summary.jfaDistr)
 S3method(print,summary.jfaEvaluation)
 S3method(print,summary.jfaPlanning)
 S3method(print,summary.jfaPosterior)
 S3method(print,summary.jfaPrior)
 S3method(print,summary.jfaSelection)
+S3method(summary,jfaDistr)
 S3method(summary,jfaEvaluation)
 S3method(summary,jfaPlanning)
 S3method(summary,jfaPosterior)
