Add first function for algorithm auditing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Description: Provides statistical methods for auditing as implemented in JASP
     <doi:10.1111/ijau.12240>, Derks et al. (2021) <doi:10.31234/osf.io/kzqp5>,
     and Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>. Second, the package
     provides statistical methods for auditing data, including (Bayesian) tests
-    of digit distributions and tests for repeated values.
+    of digit distributions and tests for repeated values. Finally, the package
+    includes methods for auditing algorithms on the aspect of fairness and bias.
 Depends:
     R (>= 3.5.0)
 Imports:
@@ -39,6 +40,7 @@ Suggests:
     kableExtra (>= 1.3.4),
     knitr,
     MUS (>= 0.1.6),
+    randomForest,
     rmarkdown,
     samplingbook (>= 1.2.4),
     testthat
