Add compas data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ S3method(summary,jfaSelection)
 export(auditPrior)
 export(digit_test)
 export(evaluation)
-export(model_bias)
+export(model_fairness)
 export(planning)
 export(repeated_test)
 export(report)
