--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Suggests:
     benford.analysis (>= 0.1.5),
     BenfordTests (>= 1.2.0),
     BeyondBenford (>= 1.4),
+    fairness,
     kableExtra (>= 1.3.4),
     knitr,
     MUS (>= 0.1.6),
