--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(plot,jfaDistr)
 S3method(plot,jfaEvaluation)
-S3method(plot,jfaModelFairness)
+S3method(plot,jfaFairness)
 S3method(plot,jfaPlanning)
 S3method(plot,jfaPosterior)
 S3method(plot,jfaPredict)
@@ -12,7 +12,7 @@ S3method(predict,jfaPosterior)
 S3method(predict,jfaPrior)
 S3method(print,jfaDistr)
 S3method(print,jfaEvaluation)
-S3method(print,jfaModelFairness)
+S3method(print,jfaFairness)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPredict)
@@ -21,14 +21,14 @@ S3method(print,jfaRv)
 S3method(print,jfaSelection)
 S3method(print,summary.jfaDistr)
 S3method(print,summary.jfaEvaluation)
-S3method(print,summary.jfaModelFairness)
+S3method(print,summary.jfaFairness)
 S3method(print,summary.jfaPlanning)
 S3method(print,summary.jfaPosterior)
 S3method(print,summary.jfaPrior)
 S3method(print,summary.jfaSelection)
 S3method(summary,jfaDistr)
 S3method(summary,jfaEvaluation)
-S3method(summary,jfaModelFairness)
+S3method(summary,jfaFairness)
 S3method(summary,jfaPlanning)
 S3method(summary,jfaPosterior)
 S3method(summary,jfaPrior)
